fix: denzel issue