@@ -12,6 +12,8 @@ javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls 
 javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls -cp ".:lib/antlr-4.9-complete.jar"  semantics/symboltable/scopes/*.java
 javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls -cp ".:lib/antlr-4.9-complete.jar"  semantics/symboltable/*.java
 javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls -cp ".:lib/antlr-4.9-complete.jar"  semantics/utils/*.java
+javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls -cp ".:lib/antlr-4.9-complete.jar"  execution/commands/*.java
+javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls -cp ".:lib/antlr-4.9-complete.jar"  execution/*.java
 javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls -cp ".:lib/richtextfx-fat-0.10.5.jar:lib"  app.java
 # javac --module-path lib/mac-javafx-sdk-11.0.2/lib --add-modules javafx.controls -cp ".:lib/richtextfx-fat-0.10.5.jar:lib/antlr-4.9-complete.jar" *.java
 # Run App
